# kie-api-python

./: .clineflow.example  .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  VERSION  pyproject.toml  setup-refs.sh
.github/: copilot-instructions.md
.github/workflows/: tests.yml
docs/: mcp.md
docs/journals/: clineflow-installation.md  kie-cli-prototype.md  kie-mcp-run-instructions.md
docs/kie-ai/: manifest.json
docs/kie-ai/raw/: cn.md  llms.txt
docs/kie-ai/raw/cn/common-api/: quickstart.md  (+3 more)
docs/kie-ai/raw/runway-api/: extend-ai-video.md  generate-ai-video.md
docs/kie-ai/raw/suno-api/: cover-suno.md  generate-lyrics.md  generate-mashup.md  generate-sounds.md  replace-section.md
docs/kie-ai/raw/veo3-api/: generate-veo-3-video.md
docs/kie-cli/: comprehensive-guide.md
docs/marketing/: README.md  deck-viewer.html  linkedin-campaign.md
examples/mcp/: claude_desktop_config.json  cursor_config.json
scripts/: download_kie_docs.py  run_kie_mcp.sh
src/kie_cli/: __init__.py  cli.py  client.py  config.py  errors.py  jobs.py  llm.py  mcp_server.py  media.py  payloads.py  polling.py  routes.py  status.py
src/kie_cli/mcp_resources/: agent_quickstart.md  contribution_guide.md  supported_models.json  tool_contracts.json
tests/: test_cli_jobs.py  test_jobs_polling.py  test_llm.py  test_mcp_protocol.py  test_mcp_server.py  test_media_status_cli.py  test_payloads.py
tests/fixtures/prompts/: image_reference_prompt.txt  image_text_prompt.txt  llm_prompt.txt  video_reference_prompt.txt  video_text_prompt.txt
tests/integration/: test_live_kie.py
(+220 files in other folders)
