[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kie-cli"
version = "0.1.0"
description = "Focused CLI prototype for KIE image and video generation APIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.1",
  "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
kie-cli = "kie_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kie_cli = ["mcp_resources/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
